--- a/data/gtk/style.css
+++ b/data/gtk/style.css
@@ -93,7 +93,7 @@ scrolledwindow.flat-headerbar scrollbar.vertical {
   color: black;
 }
 
-.local-notice list {
+.notice-row list {
   background: alpha(@accent_bg_color, .3);
   font-weight: bold;
   box-shadow: none;
