--- a/data/gtk/discover_page.ui
+++ b/data/gtk/discover_page.ui
@@ -29,9 +29,9 @@
                         <property name="wrap">True</property>
                         <property name="xalign">0</property>
                         <property name="yalign">0</property>
-                        <attributes>
-                          <attribute name="font-desc" value="Cantarell Ultra-Bold 16"/>
-                        </attributes>
+                        <style>
+                          <class name="title-2"/>
+                        </style>
                       </object>
                     </child>
                     <child>
@@ -44,9 +44,9 @@
                         <property name="wrap">True</property>
                         <property name="xalign">0</property>
                         <property name="yalign">0</property>
-                        <attributes>
-                          <attribute name="font-desc" value="Cantarell Ultra-Bold 16"/>
-                        </attributes>
+                        <style>
+                          <class name="title-2"/>
+                        </style>
                       </object>
                     </child>
                     <child>
@@ -59,9 +59,9 @@
                         <property name="wrap">True</property>
                         <property name="xalign">0</property>
                         <property name="yalign">0</property>
-                        <attributes>
-                          <attribute name="font-desc" value="Cantarell Ultra-Bold 16"/>
-                        </attributes>
+                        <style>
+                          <class name="title-2"/>
+                        </style>
                       </object>
                     </child>
                     <child>
