--- a/data/gtk/featured_carousel.ui
+++ b/data/gtk/featured_carousel.ui
@@ -11,6 +11,7 @@
             <property name="overflow">hidden</property>
             <style>
               <class name="featured-carousel"/>
+              <class name="card"/>
             </style>
             <child>
               <object class="AdwCarousel" id="carousel">
@@ -53,3 +54,4 @@
     </property>
   </template>
 </interface>
+
