--- a/data/gtk/create_station_dialog.ui
+++ b/data/gtk/create_station_dialog.ui
@@ -131,31 +131,19 @@
                             <child>
                               <object class="AdwPreferencesGroup">
                                 <child>
-                                  <object class="AdwActionRow">
+                                  <object class="AdwEntryRow" id="name_row">
                                     <property name="activatable">True</property>
                                     <property name="use_underline">True</property>
                                     <property name="title" translatable="yes">Name</property>
-                                    <property name="activatable-widget">name_entry</property>
-                                    <child>
-                                      <object class="GtkEntry" id="name_entry">
-                                        <property name="valign">center</property>
-                                        <signal name="notify::text" handler="validate_input" swapped="true"/>
-                                      </object>
-                                    </child>
+                                    <signal name="notify::text" handler="validate_input" swapped="true"/>
                                   </object>
                                 </child>
                                 <child>
-                                  <object class="AdwActionRow">
+                                  <object class="AdwEntryRow" id="url_row">
                                     <property name="activatable">True</property>
                                     <property name="use_underline">True</property>
                                     <property name="title" translatable="yes">Stream URL</property>
-                                    <property name="activatable-widget">url_entry</property>
-                                    <child>
-                                      <object class="GtkEntry" id="url_entry">
-                                        <property name="valign">center</property>
-                                        <signal name="notify::text" handler="validate_input" swapped="true"/>
-                                      </object>
-                                    </child>
+                                    <signal name="notify::text" handler="validate_input" swapped="true"/>
                                   </object>
                                 </child>
                               </object>
