--- a/data/gtk/song_listbox.ui
+++ b/data/gtk/song_listbox.ui
@@ -1,38 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <object class="GtkPopover" id="description_popover">
-    <child>
-      <object class="GtkBox">
-        <property name="orientation">vertical</property>
-        <property name="spacing">12</property>
-        <property name="margin_bottom">6</property>
-        <property name="margin_end">6</property>
-        <property name="margin_start">6</property>
-        <property name="margin_top">6</property>
-        <child>
-          <object class="GtkImage">
-            <property name="icon_name">emblem-music-symbolic</property>
-            <property name="pixel_size">48</property>
-            <style>
-              <class name="dim-label"/>
-            </style>
-          </object>
-        </child>
-        <child>
-          <object class="GtkLabel">
-            <property name="label" translatable="yes">Songs are automatically recognized using the stream metadata.
-
-If the station does not send any metadata, no songs can be recognized.</property>
-            <property name="justify">center</property>
-            <property name="wrap">True</property>
-            <property name="max_width_chars">20</property>
-            <property name="xalign">0</property>
-            <property name="yalign">0</property>
-          </object>
-        </child>
-      </object>
-    </child>
-  </object>
   <object class="GtkBox" id="song_listbox">
     <property name="orientation">vertical</property>
     <property name="spacing">6</property>
@@ -50,42 +17,35 @@ If the station does not send any metadata, no songs can be recognized.</property
                 <property name="margin_top">30</property>
                 <property name="margin_bottom">30</property>
                 <property name="orientation">vertical</property>
-                <property name="spacing">6</property>
                 <child>
                   <object class="GtkImage">
-                    <property name="margin_bottom">6</property>
                     <property name="pixel_size">64</property>
                     <property name="icon_name">dialog-information-symbolic</property>
-                    <style>
-                      <class name="dim-label"/>
-                    </style>
                   </object>
                 </child>
                 <child>
                   <object class="GtkLabel">
                     <property name="label" translatable="yes">No Songs Detected</property>
                     <property name="wrap">True</property>
-                    <attributes>
-                      <attribute name="weight" value="bold"/>
-                      <attribute name="scale" value="1.2"/>
-                    </attributes>
+                    <property name="margin_top">18</property>
+                    <property name="margin_bottom">18</property>
+                    <style>
+                      <class name="title-1"/>
+                    </style>
                   </object>
                 </child>
                 <child>
                   <object class="GtkLabel">
-                    <property name="label" translatable="yes">Detected songs will appear here.</property>
+                    <property name="label" translatable="yes">Songs are automatically recognized using the stream metadata.
+
+If the station does not send any metadata, no songs can be recognized.</property>
                     <property name="justify">center</property>
                     <property name="wrap">True</property>
                   </object>
                 </child>
-                <child>
-                  <object class="GtkMenuButton">
-                    <property name="halign">center</property>
-                    <property name="popover">description_popover</property>
-                    <property name="label" translatable="yes">_How does this work?</property>
-                    <property name="use_underline">True</property>
-                  </object>
-                </child>
+                <style>
+                  <class name="dim-label"/>
+                </style>
               </object>
             </property>
           </object>
@@ -107,26 +67,14 @@ If the station does not send any metadata, no songs can be recognized.</property
                   </object>
                 </child>
                 <child>
-                  <object class="GtkImage">
-                    <property name="icon_name">dialog-information-symbolic</property>
-                    <property name="pixel_size">64</property>
-                    <property name="margin_start">6</property>
-                    <style>
-                      <class name="dim-label"/>
-                    </style>
-                  </object>
-                </child>
-                <child>
                   <object class="GtkLabel">
                     <property name="halign">center</property>
                     <property name="margin_start">6</property>
                     <property name="margin_end">6</property>
+                    <property name="margin_top">12</property>
                     <property name="label" translatable="yes">Saved songs are located in your Music folder.</property>
                     <property name="justify">center</property>
                     <property name="wrap">True</property>
-                    <property name="max_width_chars">20</property>
-                    <property name="xalign">0</property>
-                    <property name="yalign">0</property>
                     <style>
                       <class name="dim-label"/>
                     </style>
@@ -137,9 +85,6 @@ If the station does not send any metadata, no songs can be recognized.</property
                     <property name="label" translatable="yes">_Open</property>
                     <property name="use_underline">True</property>
                     <property name="halign">center</property>
-                    <style>
-                      <class name="dim-label"/>
-                    </style>
                   </object>
                 </child>
               </object>
