--- a/data/gtk/song_row.ui
+++ b/data/gtk/song_row.ui
@@ -4,6 +4,7 @@
     <property name="activatable_widget">save_button</property>
     <property name="title_lines">3</property>
     <property name="title_selectable">True</property>
+    <property name="use_markup">False</property>
     <child>
       <object class="GtkStack" id="button_stack">
         <property name="valign">center</property>
