--- a/data/gtk/sidebar_controller.ui
+++ b/data/gtk/sidebar_controller.ui
@@ -67,10 +67,9 @@
         <property name="selectable">True</property>
         <property name="ellipsize">end</property>
         <property name="lines">3</property>
-        <attributes>
-          <attribute name="weight" value="bold"/>
-          <attribute name="scale" value="1.2"/>
-        </attributes>
+        <style>
+          <class name="title-2"/>
+        </style>
       </object>
     </child>
     <child>
