--- a/data/gtk/station_dialog.ui
+++ b/data/gtk/station_dialog.ui
@@ -330,6 +330,9 @@
                                   <object class="GtkButton" id="copy_stream_button">
                                     <property name="icon_name">edit-copy-symbolic</property>
                                     <property name="valign">center</property>
+                                    <style>
+                                      <class name="flat"/>
+                                    </style>
                                   </object>
                                 </child>
                               </object>
