--- a/data/gtk/library_page.ui
+++ b/data/gtk/library_page.ui
@@ -47,12 +47,11 @@
                     <property name="orientation">vertical</property>
                     <property name="spacing">12</property>
                     <child>
-                      <object class="GtkSpinner">
+                      <object class="GtkSpinner" id="spinner">
                         <property name="width_request">40</property>
                         <property name="height_request">40</property>
                         <property name="halign">center</property>
                         <property name="valign">center</property>
-                        <property name="spinning">True</property>
                       </object>
                     </child>
                     <child>
