--- a/data/gtk/search_page.ui
+++ b/data/gtk/search_page.ui
@@ -126,13 +126,12 @@
               <object class="GtkStackPage">
                 <property name="name">spinner</property>
                 <property name="child">
-                  <object class="GtkSpinner">
+                  <object class="GtkSpinner" id="spinner">
                     <property name="width_request">40</property>
                     <property name="height_request">40</property>
                     <property name="halign">center</property>
                     <property name="valign">center</property>
                     <property name="visible">True</property>
-                    <property name="spinning">True</property>
                   </object>
                 </property>
               </object>
