--- a/data/gtk/sidebar_controller.ui
+++ b/data/gtk/sidebar_controller.ui
@@ -139,9 +139,7 @@
                     <property name="child">
                       <object class="GtkButton" id="loading_button">
                         <child>
-                          <object class="GtkSpinner">
-                            <property name="spinning">True</property>
-                          </object>
+                          <object class="GtkSpinner" id="spinner"/>
                         </child>
                         <style>
                           <class name="pill"/>
