--- a/data/gtk/streaming_dialog.ui
+++ b/data/gtk/streaming_dialog.ui
@@ -86,9 +86,7 @@
                               <object class="AdwActionRow">
                                 <property name="title" translatable="yes">Searching for Devices…</property>
                                 <child type="prefix">
-                                  <object class="GtkSpinner">
-                                    <property name="spinning">true</property>
-                                  </object>
+                                  <object class="GtkSpinner" id="spinner"/>
                                 </child>
                               </object>
                             </child>
