--- a/data/gtk/toolbar_controller.ui
+++ b/data/gtk/toolbar_controller.ui
@@ -96,9 +96,7 @@
                     <property name="child">
                       <object class="GtkButton" id="loading_button">
                         <child>
-                          <object class="GtkSpinner">
-                            <property name="spinning">True</property>
-                          </object>
+                          <object class="GtkSpinner" id="loading_spinner"/>
                         </child>
                       </object>
                     </property>
