--- a/data/gtk/window.ui
+++ b/data/gtk/window.ui
@@ -31,14 +31,14 @@
                   <object class="GtkButton" id="back_button">
                     <property name="action_name">win.go-back</property>
                     <property name="icon_name">go-previous-symbolic</property>
-                    <property name="tooltip_text" translatable="true">Go Back</property>
+                    <property name="tooltip_text" translatable="true">Back</property>
                   </object>
                 </child>
                 <child type="end">
                   <object class="GtkMenuButton" id="appmenu_button">
                     <property name="icon_name">open-menu-symbolic</property>
                     <property name="menu_model">library_menu</property>
-                    <property name="tooltip_text" translatable="true">Open Application Menu</property>
+                    <property name="tooltip_text" translatable="true">Main Menu</property>
                   </object>
                 </child>
                 <child type="end">
@@ -47,7 +47,7 @@
                     <child>
                       <object class="GtkToggleButton" id="search_button">
                         <property name="icon_name">system-search-symbolic</property>
-                        <property name="tooltip_text" translatable="true">Open Search</property>
+                        <property name="tooltip_text" translatable="true">Search</property>
                       </object>
                     </child>
                   </object>
